--- a/views/editar.edge
+++ b/views/editar.edge
@@ -21,7 +21,7 @@
     
                             
                             <div class="form-group Precio">
-                                <label for="Precio">Precio</label>
+                                <label for="Precio">Precioo</label>
                                 <input class="form-control" value="{{producto.Precio}}" type="number" name="Precio" id="Precio" required>
                             </div>
     
