-Campo "pagado" eliminado de "Productos". -Cambios estéticos -Más documentación

--- a/views/Pagar.edge
+++ b/views/Pagar.edge
@@ -37,7 +37,7 @@
     </div>
     <div class="col-lg-4">
         <h2>Total a pagar:</h2>
-        <h3 name="total" id="total">${{totalPagar}}</h3>
+        <h3 name="total" id="total">${{totalPagar+interes}}</h3>
     </div>
     <div class="col-lg-4">
         <h2>Interés:</h2>
