--- a/views/informeProductos.edge
+++ b/views/informeProductos.edge
@@ -6,7 +6,7 @@
 <html>
 <body>
 
-    <h2>Informe de productos vendidos durante el día</h2>
+    <h2>Informe de Productos Vendidos Durante el Día</h2>
 
     <table class="table table-striped">
         <tr>
