--- a/views/layouts/appCliente.edge
+++ b/views/layouts/appCliente.edge
@@ -4,20 +4,32 @@
 <body>
   <!-- ** -->
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  
+  <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
   <ul class="navbar-nav">
     <li class="nav-item active">
       <a class="nav-link">Cliente</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
-    </li>   
+    </li>  
     <li class="nav-item">
           <a class="nav-link" href="/RealizarPedido">Realizar Pedido</a>
         </li>
-    <li class="nav-item">
+    <li class="nav-item"> 
+      <li>
       <a class="nav-link" href="/VerCarrito">Ver carrito</a>
+      </li>    
+     
     </li>
   </ul>
+</div>
+
+  <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item" >
+        <a class="nav-link" href="/">Salir</a>
+      </li>
+    </ul>
+</div>
+
 </nav>
 
 </body>
